--- a/Styles/style_confirmado.css
+++ b/Styles/style_confirmado.css
@@ -131,8 +131,8 @@ body {
     padding: 0;
     color: #000000;
     text-align: center;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     min-height: 100vh;
 }
 
